Agregamos cuadro de videojuegos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
 						<p>Tutor del curso profesional de Git en Código Facilito</p>
 					</div>
 				</div> <!-- Fin cuadro Perfil -->
-								
+				<div class="col s12 m8"> <!-- Declaracion de medidas -->
+					<div class="col s12 m12 l4"> <!-- Cuadro videojuegos-->
+						<div class="card-panel z-depth-2">
+							<div class="center">
+								<i class="material-icons icon-content green-text">videogame_asset</i>
+							</div>
+							<p class="center">Me encantan los videojuegos</p>
+						</div>
 					<script src="js/jquery.js"></script>
 					<script src="js/materialize.min.js"></script>
 					<script>
