Agregamos dos cuadros mas

--- a/index.html
+++ b/index.html
@@ -60,13 +60,33 @@
 					</div>
 				</div> <!-- Fin cuadro Perfil -->
 				<div class="col s12 m8"> <!-- Declaracion de medidas -->
-					<div class="col s12 m12 l4"> <!-- Cuadro videojuegos-->
-						<div class="card-panel z-depth-2">
-							<div class="center">
-								<i class="material-icons icon-content green-text">videogame_asset</i>
-							</div>
-							<p class="center">Me encantan los videojuegos</p>
-						</div>
+				  <div class="col s12 m12 l4"> <!-- Cuadro videojuegos-->
+				    <div class="card-panel z-depth-2">
+				      <div class="center">
+				        <i class="material-icons icon-content green-text">videogame_asset</i>
+				      </div>
+				      <p class="center">Me encantan los videojuegos</p>
+				    </div>
+				  </div>
+				  <div class="col s12 m12 l4">  <!-- Cuadro seccion top -->
+				    <div class="card-panel z-depth-2">
+				      <div class="center">
+				        <i class="material-icons icon-content gray-text">videocam</i>
+				      </div>
+				      <p class="center">Hago vídeos de la sección TOP </p>
+				    </div>
+
+				  </div>
+				  <div class="col s12 m12 l4"> <!-- Cuadro novia -->
+				    <div class="card-panel z-depth-2">
+				      <div class="center">
+				        <i class="material-icons icon-content red-text">favorite</i>
+				      </div>
+				      <p class="center">Vivo enamorado de mi novia </p>
+				    </div>
+
+				  </div>
+				</div>
 					<script src="js/jquery.js"></script>
 					<script src="js/materialize.min.js"></script>
 					<script>
