--- a/index.html
+++ b/index.html
@@ -87,6 +87,37 @@
 
 				  </div>
 				</div>
+			</div> </div> <!-- Inicia Agregar segmento Ramas-->
+		</section>
+		<div class="divider"></div>
+		<div class="section">
+			<div class="row">
+				<div class="col s12">
+					<ul class="collapsible popout" data-collapsible="accordion">
+						<li>
+							<div class="collapsible-header active"><i class="material-icons">filter_drama</i>Mi vida en código facilito</div>
+							<div class="collapsible-body">
+								<div class="row">
+									<h5 style="margin-left: 1em"> Mis actividades</h5>
+									<div class="col s6 m4 l4">
+										<p>
+											<input type="checkbox" id="lp1" checked="checked" disabled="disabled"/>
+											<label for="lp1"> Organizar cursos </label>
+										</p>
+									</div>
+									<div class="col s6 m4 l4">
+										<p>
+											<input type="checkbox" id="lp2" checked="checked" disabled="disabled"/>
+											<label for="lp2"> Grabar vídeos  </label>
+										</p>
+									</div>
+									<div class="col s6 m4 l4">
+										<p>
+											<input type="checkbox" id="lp3" checked="checked" disabled="disabled"/>
+											<label for="lp3"> Revisar guiones</label>
+										</p>
+									</div>
+								</div> <!-- Termina Agregar segmento Ramas-->
 					<script src="js/jquery.js"></script>
 					<script src="js/materialize.min.js"></script>
 					<script>
