--- a/index.html
+++ b/index.html
@@ -118,7 +118,68 @@
 										</p>
 									</div>
 								</div> <!-- Termina Agregar segmento Ramas-->
-					<script src="js/jquery.js"></script>
+					<div class="divider"></div>
+
+		<div class="fixed-action-btn " style="bottom: 45px; right: 24px;">
+			<a class="btn-floating btn-large red z-depth-4">
+				<i class="large material-icons">mode_edit</i>
+			</a>
+			<ul>
+				<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+				<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+				<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+				<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+			</ul>
+		</div>
+
+	</div>
+
+	<footer id="contacto" class="page-footer teal lighten-1">
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<h5 class="white-text">Contacto</h5>
+					<p class="white-text text">Enviame un email o contacme por las redes sociales</p>
+					<div class="row">
+						<form class="col s12" action="captcha.php" method="post">
+							<div class="row">
+								<div class="input-field col s6">
+									<i class="material-icons prefix">mode_edit</i>
+									<textarea id="icon_prefix2" class="materialize-textarea" required=""></textarea>
+									<label for="icon_prefix2">First Name</label>
+								</div>
+								<div class="input-field col s6">
+									<textarea id="textarea1" class="materialize-textarea" required=""></textarea>
+									<label for="textarea1">Textarea</label>
+								</div>
+							</div>
+							<div class="row">
+								<div class="input-field col s6">
+									<!-- recaptcha :( -->
+
+
+
+						</form>
+					</div>
+
+
+					<h5 class="white-text">Redes Sociales</h5>
+					<ul>
+						<li><a class="grey-text text-lighten-3" href="#!">facebook</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">twiter</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer-copyright">
+			<div class="container">
+				© 2016 Copyright Código Facilito
+				<a class="grey-text text-lighten-4 right" href="#!">:3</a>
+			</div>
+		</div>
+	</footer>
+								<script src="js/jquery.js"></script>
 					<script src="js/materialize.min.js"></script>
 					<script>
 						$(document).ready(function(){
